RESOLVED FIXED314258
Fix the sizeInBytes of NativeImage and the ImageFrame
https://bugs.webkit.org/show_bug.cgi?id=314258
Summary Fix the sizeInBytes of NativeImage and the ImageFrame
Said Abou-Hallawa
Reported 2026-05-06 16:36:58 PDT
The sizeInBytes of NativeImage and ImageFrame are outdated. The sizeInBytes of these objects still multiply the area of the image by 4. This is not correct for HDR images. the bitPerChannel can 10 or 16 for example. Also the size of the CVPixelBuffer gain-map image should be taken into consideration.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-06 16:37:04 PDT
Said Abou-Hallawa
Comment 2 2026-05-06 17:00:41 PDT
EWS
Comment 3 2026-05-06 23:43:33 PDT
Committed 312773@main (c2a0f7a73911): <https://commits.webkit.org/312773@main> Reviewed commits have been landed. Closing PR #64422 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.