Fix the sizeInBytes of NativeImage and the ImageFrame https://bugs.webkit.org/show_bug.cgi?id=314258 rdar://176406494

Reviewed by Cameron McCormack.

The sizeInBytes is used to tell the memory manager how much memory an image takes.
To fire the memory warning at the right time, the calculation should be accurate.

The sizeInBytes of these objects still multiply the area of the image by 4. This
is not necessarily correct for HDR images. the bitPerChannel can 10 or 16 for
example. Also the size of the CVPixelBuffer gain-map image should be taken into
consideration.

* Source/WebCore/platform/graphics/BitmapImageSource.cpp:
(WebCore::BitmapImageSource::cacheNativeImageAtIndex):
* Source/WebCore/platform/graphics/ImageFrame.cpp:
(WebCore::ImageFrame::sizeInBytes const):
(WebCore::ImageFrame::clearSourceImage):
(WebCore::ImageFrame::clearImage):
(WebCore::ImageFrame::clear):
* Source/WebCore/platform/graphics/ImageFrame.h:
(WebCore::ImageFrame::Source::sizeInBytes const):
(WebCore::ImageFrame::sizeInBytes const): Deleted.
* Source/WebCore/platform/graphics/NativeImage.cpp:
(WebCore::NativeImage::sizeInBytes const):
* Source/WebCore/platform/graphics/NativeImage.h:
* Source/WebCore/platform/graphics/cg/NativeImageCG.cpp:
(WebCore::NativeImage::sizeInBytes const):

Canonical link: https://commits.webkit.org/312773@main